Prevent the editor from being too short
Refs #649

--- a/assets/style.css
+++ b/assets/style.css
@@ -855,6 +855,7 @@ html-editor {
 
   & :--textarea {
     block-size: 100vb;
+    min-block-size: var(--space-3xl);
     resize: none;
   }
 
